# terminator_prod

./: .gitignore  AUDIT.md  BUGS_2026-03-27.md  BUG_REPORT_2026-03-27.md  CODE_REVIEW.md  CODE_REVIEW_2026-03-25.md  CODE_REVIEW_2026-03-27.md  NEWS_FEED_CODE_REVIEW.md  PRODUCTION_PLAN.md  README.md  TODO.md  config.example.py  implementation_plan_stable_sync.md  order_splitting_design.md  requirements.txt  review_31_mar.py
changelogs/: 2026-03-19.md  2026-03-21.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-04-08-chase-review.md  2026-04-08-db-health-review.md  2026-04-08.md
deploy/: TODO_260406.md  com.fw.terminator.sync-to-gcp.plist  conflict_monitor_workflow.yaml  evening_stop_workflow.yaml  fetch_secrets.sh  full_deploy.sh  morning_start_workflow.yaml  setup_vm.sh  smart_merge_history.py  spt_v4.service  sync_history_back.sh  sync_keys.sh  sync_to_secret_manager.sh  terminator-downloader.service  terminator.service  vm_scheduling_plan.md
docs/: order_type_classification_plan.md  recon_modal_refresh_plan_20260402.md  trade_logic_fixes_20260402.md  trade_modal_sync_fix.md
eod/: EOD_REPORT_BUGS.md  eod_report.py  run_eod.sh  run_terminator_eod.sh  terminator_eod_history.csv  terminator_eod_history.csv.bak.20260401  update_readme_stats.py  (+3 more)
terminator_rust/: .gitignore  Cargo.toml  FIXES.md  IMPLEMENTATION_PLAN.md  PHASE5_FIXES.md
terminator_rust/src/: config.rs  execution.rs  greeks.rs  grid.rs  lib.rs  main.rs  manager.rs  options_chain.rs  parser.rs  strategy.rs  token.rs  tui.rs  websocket.rs
terminator_rust/tests/: parser_tests.rs  strategy_tests.rs
(+37 files in other folders)
